@startuml Dastern Project - Class Diagram

!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho

' Enums
enum Unit {
  tablet
  ml
  mg
  other
}

enum MedicationTimeOfDay {
  morning
  afternoon
  evening
  night
  other
}

enum WeekDay {
  monday
  tuesday
  wednesday
  thursday
  friday
  saturday
  sunday
}

enum IntakeStatus {
  pending
  missed
  skipped
  taken
}

enum BloodGroup {
  aPlus
  aMinus
  bPlus
  bMinus
  abPlus
  abMinus
  oPlus
  oMinus
  --
  +type: String
  +rh: String
  --
  +toString(): String
}

' Classes
class Patient {
  +id: String
  +name: String
  +dateOfBirth: DateTime
  +address: String?
  +tel: String
  +bloodtype: String?
  +familyContact: String?
  +weight: double?
  --
  +toJson(): Map<String, dynamic>
  +copyWith(): Patient
  +age: int {get}
  +fromJson(json): Patient {static}
}

class Dosage {
  +amount: double
  +unit: Unit
  --
  +toJson(): Map<String, dynamic>
  +fromJson(json): Dosage {static}
  +toString(): String
}

class Medication {
  +id: String
  +name: String
  +dosage: Dosage
  +instruction: String
  +prescribeBy: String
  +color: Color?
  +icon: IconData?
  --
  +toJson(): Map<String, dynamic>
  +fromJson(json): Medication {static}
  +copyWith(): Medication
}

class Reminder {
  +id: String
  +medicationId: String
  +time: DateTime
  +dosageAmount: int
  +timeOfDay: MedicationTimeOfDay
  +activeDays: List<WeekDay>
  +isActive: bool
  --
  +toJson(): Map<String, dynamic>
  +fromJson(json): Reminder {static}
  +copyWith(): Reminder
  +shouldFireToday(): bool
}

class IntakeHistory {
  +id: String
  +medicationId: String
  +reminderId: String
  +scheduledTime: DateTime
  +takenAt: DateTime?
  +status: IntakeStatus
  --
  +toJson(): Map<String, dynamic>
  +fromJson(json): IntakeHistory {static}
  +copyWith(): IntakeHistory
}

class generateId <<utility>> {
  +{static} v4(): String
}

' Relationships
Medication *-- Dosage : contains
Dosage --> Unit : uses
Reminder --> MedicationTimeOfDay : uses
Reminder --> WeekDay : uses
IntakeHistory --> IntakeStatus : uses
Patient ..> generateId : uses
Medication ..> generateId : uses
Reminder ..> generateId : uses
IntakeHistory ..> generateId : uses

Reminder --> Medication : references
IntakeHistory --> Medication : references
IntakeHistory --> Reminder : references

note right of Reminder
  A reminder is scheduled for
  a specific medication at
  specific times on specific days
end note

note right of IntakeHistory
  Tracks whether a scheduled
  medication was actually taken
end note

note bottom of Medication
  Represents a prescribed
  medication with dosage
  and instructions
end note

@enduml
